src/parser/LatexParser.ts
// @ts-nocheck
// Generated from LatexParser.g4 by ANTLR 4.12.0
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import LatexParserVisitor from "./LatexParserVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class LatexParser extends Parser {
	public static readonly L_BRACKET = 1;
	public static readonly ALT_L_BRACKET = 2;
	public static readonly SEMICOLON = 3;
	public static readonly L_BRACE = 4;
	public static readonly R_BRACE = 5;
	public static readonly L_PAREN = 6;
	public static readonly R_PAREN = 7;
	public static readonly VBAR = 8;
	public static readonly DOUBLE_VBAR = 9;
	public static readonly UNDERSCORE = 10;
	public static readonly EXCLAMATION = 11;
	public static readonly PI = 12;
	public static readonly CMD_INT = 13;
	public static readonly CMD_INT_UNDERSCORE = 14;
	public static readonly CMD_INT_UNDERSCORE_SINGLE_CHAR_NUMBER = 15;
	public static readonly CMD_INT_UNDERSCORE_SINGLE_CHAR_ID = 16;
	public static readonly CMD_MATHRM = 17;
	public static readonly CMD_FRAC = 18;
	public static readonly CMD_FRAC_INTS = 19;
	public static readonly CMD_CDOT = 20;
	public static readonly CMD_TIMES = 21;
	public static readonly CMD_SQRT = 22;
	public static readonly CMD_SQRT_INT = 23;
	public static readonly CMD_SIM = 24;
	public static readonly CMD_APPROX = 25;
	public static readonly CMD_PLACEHOLDER = 26;
	public static readonly TRANSPOSE = 27;
	public static readonly BACKSLASH = 28;
	public static readonly AS_LINES = 29;
	public static readonly CMD_SIN = 30;
	public static readonly CMD_COS = 31;
	public static readonly CMD_TAN = 32;
	public static readonly CMD_COT = 33;
	public static readonly CMD_SEC = 34;
	public static readonly CMD_CSC = 35;
	public static readonly CMD_ARCSIN = 36;
	public static readonly CMD_ARCCOS = 37;
	public static readonly CMD_ARCTAN = 38;
	public static readonly CMD_SINH = 39;
	public static readonly CMD_COSH = 40;
	public static readonly CMD_TANH = 41;
	public static readonly CMD_COTH = 42;
	public static readonly CMD_LN = 43;
	public static readonly CMD_LOG = 44;
	public static readonly CMD_SLASH_LOG_UNDERSCORE = 45;
	public static readonly CMD_SLASH_LOG_UNDERSCORE_SINGLE_CHAR_NUMBER = 46;
	public static readonly CMD_SLASH_LOG_UNDERSCORE_SINGLE_CHAR_ID = 47;
	public static readonly COMMENT = 48;
	public static readonly CMD_LEFT = 49;
	public static readonly CMD_RIGHT = 50;
	public static readonly DOUBLE_DOLLAR_SIGN = 51;
	public static readonly ADD = 52;
	public static readonly SUB = 53;
	public static readonly CARET = 54;
	public static readonly EQ = 55;
	public static readonly LT = 56;
	public static readonly GT = 57;
	public static readonly LTE = 58;
	public static readonly GTE = 59;
	public static readonly COMMA = 60;
	public static readonly DECIMAL_POINT = 61;
	public static readonly CARET_SINGLE_CHAR_NUMBER = 62;
	public static readonly CARET_SINGLE_CHAR_ID = 63;
	public static readonly NUMBER = 64;
	public static readonly BEGIN_MATRIX = 65;
	public static readonly END_MATRIX = 66;
	public static readonly AMPERSAND = 67;
	public static readonly DOUBLE_BACKSLASH = 68;
	public static readonly UNDERSCORE_SUBSCRIPT = 69;
	public static readonly CARET_SINGLE_CHAR_ID_UNDERSCORE_SUBSCRIPT = 70;
	public static readonly ID = 71;
	public static readonly WS = 72;
	public static readonly SLASH_SPACE = 73;
	public static readonly SLASH_COLON = 74;
	public static readonly NBSP = 75;
	public static readonly ERROR_CHAR = 76;
	public static readonly R_BRACKET = 77;
	public static readonly ALT_R_BRACKET = 78;
	public static readonly U_CMD_FRAC = 79;
	public static readonly U_CMD_FRAC_INTS = 80;
	public static readonly U_CMD_CDOT = 81;
	public static readonly U_CMD_TIMES = 82;
	public static readonly U_CMD_SQRT = 83;
	public static readonly U_COMMA = 84;
	public static readonly U_CARET = 85;
	public static readonly U_NAME = 86;
	public static readonly U_L_PAREN = 87;
	public static readonly U_R_PAREN = 88;
	public static readonly U_L_BRACE = 89;
	public static readonly U_R_BRACE = 90;
	public static readonly U_ONE = 91;
	public static readonly U_NUMBER = 92;
	public static readonly U_CMD_LEFT = 93;
	public static readonly U_CMD_RIGHT = 94;
	public static readonly U_WS = 95;
	public static readonly U_SLASH_SPACE = 96;
	public static readonly U_SLASH_COLON = 97;
	public static readonly U_NBSP = 98;
	public static readonly U_ERROR_CHAR = 99;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_statement = 0;
	public static readonly RULE_scatter_plot_query = 1;
	public static readonly RULE_parametric_plot_query = 2;
	public static readonly RULE_insert_matrix = 3;
	public static readonly RULE_id = 4;
	public static readonly RULE_number = 5;
	public static readonly RULE_number_with_units = 6;
	public static readonly RULE_assign = 7;
	public static readonly RULE_assign_list = 8;
	public static readonly RULE_assign_plus_query = 9;
	public static readonly RULE_query = 10;
	public static readonly RULE_equality = 11;
	public static readonly RULE_piecewise_assign = 12;
	public static readonly RULE_piecewise_arg = 13;
	public static readonly RULE_trig_function = 14;
	public static readonly RULE_indefinite_integral_cmd = 15;
	public static readonly RULE_integral_cmd = 16;
	public static readonly RULE_derivative_cmd = 17;
	public static readonly RULE_n_derivative_cmd = 18;
	public static readonly RULE_argument = 19;
	public static readonly RULE_condition = 20;
	public static readonly RULE_id_list = 21;
	public static readonly RULE_guess = 22;
	public static readonly RULE_guess_list = 23;
	public static readonly RULE_condition_single = 24;
	public static readonly RULE_condition_chain = 25;
	public static readonly RULE_matrix_row = 26;
	public static readonly RULE_user_function = 27;
	public static readonly RULE_builtin_function = 28;
	public static readonly RULE_expr = 29;
	public static readonly RULE_u_block = 30;
	public static readonly RULE_u_insert_matrix = 31;
	public static readonly RULE_u_fraction = 32;
	public static readonly RULE_u_expr = 33;
	public static readonly literalNames: (string | null)[] = [ null, "'['", 
                                                            "'\\lbrack'", 
                                                            "';'", null, 
                                                            null, null, 
                                                            null, "'|'", 
                                                            null, "'_'", 
                                                            "'!'", "'\\pi'", 
                                                            "'\\int'", null, 
                                                            null, null, 
                                                            "'\\mathrm'", 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            "'\\sim'", "'\\approx'", 
                                                            "'\\placeholder'", 
                                                            "'^{\\mathrm{T}}'", 
                                                            "'\\'", null, 
                                                            "'sin'", "'cos'", 
                                                            "'tan'", "'cot'", 
                                                            "'sec'", "'csc'", 
                                                            "'arcsin'", 
                                                            "'arccos'", 
                                                            "'arctan'", 
                                                            "'sinh'", "'cosh'", 
                                                            "'tanh'", "'coth'", 
                                                            "'ln'", "'log'", 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            "'$$'", "'+'", 
                                                            "'-'", null, 
                                                            "'='", "'<'", 
                                                            "'>'", "'\\le'", 
                                                            "'\\ge'", null, 
                                                            "'.'", null, 
                                                            null, null, 
                                                            "'\\begin{bmatrix}'", 
                                                            "'\\end{bmatrix}'", 
                                                            "'&'", "'\\\\'", 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            "']'", "'\\rbrack'", 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            "'1'", null, 
                                                            "'\\left'", 
                                                            "'\\right'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "L_BRACKET", 
                                                             "ALT_L_BRACKET", 
                                                             "SEMICOLON", 
                                                             "L_BRACE", 
                                                             "R_BRACE", 
                                                             "L_PAREN", 
                                                             "R_PAREN", 
                                                             "VBAR", "DOUBLE_VBAR", 
                                                             "UNDERSCORE", 
                                                             "EXCLAMATION", 
                                                             "PI", "CMD_INT", 
                                                             "CMD_INT_UNDERSCORE", 
                                                             "CMD_INT_UNDERSCORE_SINGLE_CHAR_NUMBER", 
                                                             "CMD_INT_UNDERSCORE_SINGLE_CHAR_ID", 
                                                             "CMD_MATHRM", 
                                                             "CMD_FRAC", 
                                                             "CMD_FRAC_INTS", 
                                                             "CMD_CDOT", 
                                                             "CMD_TIMES", 
                                                             "CMD_SQRT", 
                                                             "CMD_SQRT_INT", 
                                                             "CMD_SIM", 
                                                             "CMD_APPROX", 
                                                             "CMD_PLACEHOLDER", 
                                                             "TRANSPOSE", 
                                                             "BACKSLASH", 
                                                             "AS_LINES", 
                                                             "CMD_SIN", 
                                                             "CMD_COS", 
                                                             "CMD_TAN", 
                                                             "CMD_COT", 
                                                             "CMD_SEC", 
                                                             "CMD_CSC", 
                                                             "CMD_ARCSIN", 
                                                             "CMD_ARCCOS", 
                                                             "CMD_ARCTAN", 
                                                             "CMD_SINH", 
                                                             "CMD_COSH", 
                                                             "CMD_TANH", 
                                                             "CMD_COTH", 
                                                             "CMD_LN", "CMD_LOG", 
                                                             "CMD_SLASH_LOG_UNDERSCORE", 
                                                             "CMD_SLASH_LOG_UNDERSCORE_SINGLE_CHAR_NUMBER", 
                                                             "CMD_SLASH_LOG_UNDERSCORE_SINGLE_CHAR_ID", 
                                                             "COMMENT", 
                                                             "CMD_LEFT", 
                                                             "CMD_RIGHT", 
                                                             "DOUBLE_DOLLAR_SIGN", 
                                                             "ADD", "SUB", 
                                                             "CARET", "EQ", 
                                                             "LT", "GT", 
                                                             "LTE", "GTE", 
                                                             "COMMA", "DECIMAL_POINT", 
                                                             "CARET_SINGLE_CHAR_NUMBER", 
                                                             "CARET_SINGLE_CHAR_ID", 
                                                             "NUMBER", "BEGIN_MATRIX", 
                                                             "END_MATRIX", 
                                                             "AMPERSAND", 
                                                             "DOUBLE_BACKSLASH", 
                                                             "UNDERSCORE_SUBSCRIPT", 
                                                             "CARET_SINGLE_CHAR_ID_UNDERSCORE_SUBSCRIPT", 
                                                             "ID", "WS", 
                                                             "SLASH_SPACE", 
                                                             "SLASH_COLON", 
                                                             "NBSP", "ERROR_CHAR", 
                                                             "R_BRACKET", 
                                                             "ALT_R_BRACKET", 
                                                             "U_CMD_FRAC", 
                                                             "U_CMD_FRAC_INTS", 
                                                             "U_CMD_CDOT", 
                                                             "U_CMD_TIMES", 
                                                             "U_CMD_SQRT", 
                                                             "U_COMMA", 
                                                             "U_CARET", 
                                                             "U_NAME", "U_L_PAREN", 
                                                             "U_R_PAREN", 
                                                             "U_L_BRACE", 
                                                             "U_R_BRACE", 
                                                             "U_ONE", "U_NUMBER", 
                                                             "U_CMD_LEFT", 
                                                             "U_CMD_RIGHT", 
                                                             "U_WS", "U_SLASH_SPACE", 
                                                             "U_SLASH_COLON", 
                                                             "U_NBSP", "U_ERROR_CHAR" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"statement", "scatter_plot_query", "parametric_plot_query", "insert_matrix", 
		"id", "number", "number_with_units", "assign", "assign_list", "assign_plus_query", 
		"query", "equality", "piecewise_assign", "piecewise_arg", "trig_function", 
		"indefinite_integral_cmd", "integral_cmd", "derivative_cmd", "n_derivative_cmd", 
		"argument", "condition", "id_list", "guess", "guess_list", "condition_single", 
		"condition_chain", "matrix_row", "user_function", "builtin_function", 
		"expr", "u_block", "u_insert_matrix", "u_fraction", "u_expr",
	];
	public get grammarFileName(): string { return "LatexParser.g4"; }
	public get literalNames(): (string | null)[] { return LatexParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return LatexParser.symbolicNames; }
	public get ruleNames(): string[] { return LatexParser.ruleNames; }
	public get serializedATN(): number[] { return LatexParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, LatexParser._ATN, LatexParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let localctx: StatementContext = new StatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, LatexParser.RULE_statement);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 85;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 0, this._ctx) ) {
			case 1:
				{
				this.state = 68;
				this.assign();
				}
				break;
			case 2:
				{
				this.state = 69;
				this.assign_list();
				}
				break;
			case 3:
				{
				this.state = 70;
				this.assign_plus_query();
				}
				break;
			case 4:
				{
				this.state = 71;
				this.query();
				}
				break;
			case 5:
				{
				this.state = 72;
				this.equality();
				}
				break;
			case 6:
				{
				this.state = 73;
				this.u_block();
				}
				break;
			case 7:
				{
				this.state = 74;
				this.number_();
				}
				break;
			case 8:
				{
				this.state = 75;
				this.id();
				}
				break;
			case 9:
				{
				this.state = 76;
				this.id_list();
				}
				break;
			case 10:
				{
				this.state = 77;
				this.guess();
				}
				break;
			case 11:
				{
				this.state = 78;
				this.guess_list();
				}
				break;
			case 12:
				{
				this.state = 79;
				this.expr(0);
				}
				break;
			case 13:
				{
				this.state = 80;
				this.condition();
				}
				break;
			case 14:
				{
				this.state = 81;
				this.piecewise_assign();
				}
				break;
			case 15:
				{
				this.state = 82;
				this.insert_matrix();
				}
				break;
			case 16:
				{
				this.state = 83;
				this.scatter_plot_query();
				}
				break;
			case 17:
				{
				this.state = 84;
				this.parametric_plot_query();
				}
				break;
			}
			this.state = 87;
			this.match(LatexParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public scatter_plot_query(): Scatter_plot_queryContext {
		let localctx: Scatter_plot_queryContext = new Scatter_plot_queryContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, LatexParser.RULE_scatter_plot_query);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 99;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				{
				{
				this.state = 89;
				this.match(LatexParser.L_PAREN);
				this.state = 90;
				this.expr(0);
				this.state = 91;
				this.match(LatexParser.COMMA);
				this.state = 92;
				this.expr(0);
				this.state = 93;
				this.match(LatexParser.R_PAREN);
				}
				}
				break;
			case 2:
				{
				{
				this.state = 95;
				this.expr(0);
				this.state = 96;
				this.match(LatexParser.COMMA);
				this.state = 97;
				this.expr(0);
				}
				}
				break;
			}
			this.state = 102;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===29) {
				{
				this.state = 101;
				this.match(LatexParser.AS_LINES);
				}
			}

			this.state = 104;
			this.match(LatexParser.EQ);
			this.state = 115;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 6:
				{
				{
				this.state = 105;
				this.match(LatexParser.L_PAREN);
				this.state = 106;
				this.u_block();
				this.state = 107;
				this.match(LatexParser.COMMA);
				this.state = 108;
				this.u_block();
				this.state = 109;
				this.match(LatexParser.R_PAREN);
				}
				}
				break;
			case 1:
			case 2:
				{
				{
				this.state = 111;
				this.u_block();
				this.state = 112;
				this.match(LatexParser.COMMA);
				this.state = 113;
				this.u_block();
				}
				}
				break;
			case -1:
				break;
			default:
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public parametric_plot_query(): Parametric_plot_queryContext {
		let localctx: Parametric_plot_queryContext = new Parametric_plot_queryContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, LatexParser.RULE_parametric_plot_query);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			{
			this.state = 117;
			this.match(LatexParser.L_PAREN);
			this.state = 118;
			this.expr(0);
			this.state = 119;
			this.match(LatexParser.COMMA);
			this.state = 120;
			this.expr(0);
			this.state = 121;
			this.match(LatexParser.R_PAREN);
			}
			this.state = 123;
			localctx._for_id = this.match(LatexParser.ID);
			this.state = 124;
			this.match(LatexParser.L_PAREN);
			this.state = 125;
			this.argument();
			this.state = 126;
			this.match(LatexParser.R_PAREN);
			this.state = 131;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===71) {
				{
				this.state = 127;
				localctx._points_id_0 = this.match(LatexParser.ID);
				this.state = 128;
				localctx._num_points = this.number_();
				this.state = 129;
				localctx._points_id_1 = this.match(LatexParser.ID);
				}
			}
